[tool.poetry]
name = "rlacalc"
version = "0.3.0"
description = "Statistical calculations for risk-limiting election tabulation audits (RLAs)"
authors = ["Neal McBurnett <neal@mcburnett.org>"]

packages = [
    { include = "rlacalc", from = "src" },
    { include = "hug_noop.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
rlacalc = "rlacalc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
